services/harbor/post-install/harbor-virtualservice.yaml
---
# The ServiceEntry will advertise the listed "hosts" on the service mesh without having a DNS record set somewhere
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: harbor
  namespace: harbor
spec:
  hosts:
  - harbor.glythium.io
  - harbor.glythium.com
  location: MESH_INTERNAL # Value can be MESH_INTERNAL | MESH_EXTERNAL
  ports:
  - number: 80
    name: harbor
    protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: harbor
  namespace: harbor
  labels:
    virtualService: harbor
spec:
  hosts:
  - harbor.glythium.io
  - harbor.glythium.com
  gateways:
  - istio-ingress/ingress-gateway
  - mesh
  http:
    # There are specific requests to the API that need to go to the core
  - name: core
    match:
    - uri:
        prefix: "/api/"
    - uri:
        prefix: "/service/"
    - uri:
        prefix: "/v2/"
    - uri:
        prefix: "/chartrepo/"
    - uri:
        prefix: "/c/"
    route:
    - destination:
        host: harbor-core
    # Every other request must fallthrough to the portal
  - name: portal
    route:
    - destination:
        host: harbor-portal
